gcc/algol60/testsuite/fail/assign1.a60
'begin'
 4 := 5;
'end';
